--- a/angular-myownweb/package.json
+++ b/angular-myownweb/package.json
@@ -17,12 +17,16 @@
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
     "@angular/material": "^18.2.10",
+    "@angular/material-moment-adapter": "^18.2.10",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
