--- a/MyOwnWebAPI/appsettings.Development.json
+++ b/MyOwnWebAPI/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Walkever-PC;Database=MyOwnWebAPI;Integrated Security=True;TrustServerCertificate=True"
+  },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "originalsPermitted": "http://localhost:4200"
   }
-}
