--- a/angular-myownweb/package.json
+++ b/angular-myownweb/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
     "moment": "^2.30.1",
+    "ngx-global-events": "^3.1.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
