finish front end for aboutme

--- a/MyOwnWebAPI/appsettings.Development.json
+++ b/MyOwnWebAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Walkever-PC;Database=MyOwnWebAPI;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=Walkever-PC;Database=MyOwnWebAPI;Integrated Security=True;TrustServerCertificate=True",
+    "AzureStorageConnection": ""
   },
   "Logging": {
     "LogLevel": {
